--- a/estilos/sobre.css
+++ b/estilos/sobre.css
@@ -32,3 +32,19 @@ nav a:hover{
   border-bottom: 2px solid black;
   background-color: darkgray;
 }
+div{
+  margin: 8px;
+  align-items: center;
+  background-color: #f5f5f5;
+  text-align: center;
+  border-radius: 10px;
+  padding: 10px;
+}
+div ul{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+ul{
+  list-style: upper-roman;
+}
