--- a/style.css
+++ b/style.css
@@ -2,11 +2,11 @@ body {
   margin: 0;
   font-family: Arial, sans-serif;
   background-color: white;
-  width: 100%;
+  width: auto;
 }
 header {
   background-color: blanchedalmond;
-  padding: 20px;
+  padding: 10px;
   width: auto;
 }
 nav {
@@ -15,7 +15,7 @@ nav {
   align-items: center;
 }
 nav h1 {
-  margin: 0;
+  margin: 8px;
 }
 nav ul {
   list-style: none;
@@ -28,19 +28,20 @@ nav a {
   padding: 8px;
   
 }
-nav a:hover{
+nav a:hover {
   border-bottom: 2px solid black;
   background-color: darkgray;
 }
 .perfil {
+  position: relative;
   text-align: left;
   padding: 40px 20px;
+  left: -20px;
 }
 
 .foto-perfil {
   width: 150px;
   height: 250px;
-  object-fit: cover;
   border: 4px solid #333;
   margin-bottom: 20px;
   border-radius: 40px 40px 0px 0px;
@@ -52,6 +53,9 @@ nav a:hover{
 }
 .hero h2 {
   font-size: 2em;
+}
+div {
+  padding: 10px;
 }
 .btn {
   display: inline-block;
@@ -68,41 +72,110 @@ nav a:hover{
   margin: auto; 
   background-color: #f5f5f5;
 }
-.projetos{
+.projetos {
   padding: 40px 20px;
-  max-width: 800px;
   margin: auto;
+  width:0 auto;
 }
-.projeto1-2{
+.projeto1-2 {
     display: flex;
     gap: 20px;
 }
  .projeto1 {
   background-color: azure;
-  padding: 20px;
+  padding: 10px;
   margin-top: 20px;
   border-left: 5px solid #333;
 }
-.projeto2{
+.projeto2 {
   background-color: burlywood;
-  padding: 20px;
+  padding: 10px;
   margin-top: 20px;
   border-left: 5px solid #333;
 }
-.projeto2 a{
+.projeto1 a {
   text-decoration: none;
   color:black;
 }
-.projeto1 a{
+.projeto2 a {
   text-decoration: none;
   color:black;
 }
-@media(min-width:600px){
-    .foto-perfil{
-        width: 180px;
-        height: 300px;
-    }
-    .projeto1-2{
-        display:block ;
-    }
+.projeto1 a:hover{
+  text-decoration: underline
+}
+.projeto2 a:hover{
+  text-decoration: underline
+}
+.projeto1 img {
+  width: 155px;
+  height:150px;
+  border-radius: 8px;
+}
+.projeto2 img {
+  width: 155px;
+  height: 150px;
+  border-radius: 8px;
+}
+/* Versão para os tablet */
+@media(min-width:600px) and (max-width:991.98px){
+  .foto-perfil {
+    width: 180px;
+    height: 300px;
+  }
+  div {
+    padding: 17px;
+  }
+  .projeto1-2 {
+    display:block ;
+  }
+  .projeto1 img {
+    width: 180px;
+    height: 120px;
+  }
+  .projeto2 img {
+    width: 180px;
+    height: 120px;
+  }
+}
+/* Versão para os computadores */
+@media(min-width:992px) {
+  nav h1 {
+    font-size: 40px;
+  }
+  nav a {
+    font-size: 20px;
+  }
+  .sobre  {
+    padding: 80px 40px;
+    font-size: 24px;
+  }
+  div {
+    font-size: 24px;
+    padding: 20px;
+  }
+  .projetos h2 {
+    font-size: 25px;
+  }
+ .foto-perfil {
+    width: 280px;
+    height: 500px;
+  }
+  .projeto1-2 {
+    display:block ;
+  }
+  .projeto1 a :hover {
+    text-decoration: underline;
+  }
+  .projeto2 a :hover {
+    text-decoration: underline;
+  }
+  .projeto1 img {
+    width: 180px;
+    height: 120px;
+  }
+  .projeto2 img {
+    width: 180px;
+    height: 120px;
+  }
 }
