--- a/style.css
+++ b/style.css
@@ -66,6 +66,9 @@ div {
   text-decoration: none;
   border-radius: 5px;
 }
+.btn:hover{
+  transform: scale(1.1);
+}
 .sobre {
   padding: 40px 20px;
   max-width: 800px;
