--- a/estilos/Projeto.css
+++ b/estilos/Projeto.css
@@ -32,3 +32,37 @@ nav a:hover{
   border-bottom: 2px solid black;
   background-color: darkgray;
 }
+.projetos{  
+  display: grid;
+  grid-template-columns: repeat(2, 4fr);
+  gap: 10px;
+  align-items: center;
+  justify-content: center;
+  padding: 10px;
+  text-align: center;
+}
+.projetos img{
+  width: 200px;
+  height: 200px;
+}
+.projetos img:hover{
+  transform: scale(1.2);
+  cursor: pointer;
+}
+.projetos a{
+  gap: 20px;
+  text-decoration: none;
+  color: #6656ff;
+}
+.projetos a :hover{
+  background-color: #666;
+  border-radius: 8px;
+  padding: 8px;
+  border-bottom: 4px solid #6656ff;
+}
+.proto{
+  background: #fff;
+  border-radius: 10px;
+  padding: 8px;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+}
